<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
     >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/home"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        style="@style/LoginFormContainer" >

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@drawable/home"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="245dp"
            android:layout_height="115dp"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:maxHeight="30dp"
            android:maxWidth="220dp"
            android:src="@drawable/iut_dijon" />

        <EditText
            android:id="@+id/login"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:background="@drawable/iut_button_style"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/prompt_login"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/iut_button_style"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/iut_button_style"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_sign_in_short"
            android:textColor="@color/black" />
        
        
        <CheckBox
            android:id="@+id/remember_password_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"/>
            
    </LinearLayout>

</merge>