<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    android:padding="0dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.04"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <Button
                android:id="@+id/planning_btn"
                style="@style/HomeButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/calendar"
                android:onClick="startADEService" />
            
            <TextView
                android:id="@+id/planning_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/ade_button_title"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/blank" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <Button
                android:id="@+id/ftp_btn"
                style="@style/HomeButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/ftp"
                android:onClick="startFTPService" />

            <TextView
                android:id="@+id/ftp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/ftp_button_title"
                android:textColor="@color/blank"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <!--
         <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.04"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <Button
                android:id="@+id/emails_btn"
                style="@style/HomeButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/mails"
                android:onClick="startEmailService"
                 />
            
            <TextView
                android:id="@+id/email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/mail_button_title"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/blank" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5" >

            <Button
                android:id="@+id/marks_btn"
                style="@style/HomeButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/marks"
                android:freezesText="false"
                android:gravity="top|left"
                android:includeFontPadding="false"
                android:onClick="startSchoolingService"
                android:scrollHorizontally="false" />
            
            <TextView
                android:id="@+id/marks_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/schooling_button_title"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/blank" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>